# gcnr

./: README.md  example.py  pyproject.toml
example/: example.py
examples/: stability.py  transient.py  uranium.py
gcnr/: __init__.py  eos.py  gcr1.py  models.py  tools.py
gcnr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gcnr/data/: uranium_eos_ievlev.txt  uranium_eos_koroteyev.txt  uranium_eos_parks.txt
