[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcnr"
version = "0.1.0"
description = "Gaseous Core Nuclear Reactor"
authors = [
  { name="CA41", email="alexey.cherezov@psi.ch" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "numpy"
]
[tool.setuptools.package-data]
"gcnr.data" = ["*.txt"]