[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcnr"
version = "0.1.0"
description = "Gaseous Core Nuclear Reactors"
authors = [
  { name="CA41", email="alexey.cherezov@psi.ch" }
  { name="PJ41", email="jan.piaskowy@psi.ch" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "numpy"
]
[tool.setuptools.package-data]
"gcnr.data" = ["*.txt"]